sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/Contract_Associated_Accounts__c.object-meta.xml
<CustomObject>
    <label>Contract Associated Accounts</label>
    <nameField>
        <displayFormat>CAA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Associated Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>