sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Associated_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account_Ids__c</fullName>
    <description>LEM-6144 This holds a collection of Account IDs, up to its limit of ~7000.</description>
    <label>Associated Account Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>