sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Batch_Process_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It determines whether the requests should be processed via Batch?</description>
    <inlineHelpText>Whether the requests should be processed via Batch?</inlineHelpText>
    <label>Batch Process Enabled?</label>
    <type>Checkbox</type>
</CustomField>