sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Batch_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_Status__c</fullName>
    <label>Batch Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>