sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/CCP_ANSO_flow__c.field-meta.xml
<CustomField>
    <fullName>CCP_ANSO_flow__c</fullName>
    <description>LEM-16093 Set as Yes if CAA record got created through ANSO and No in case of created through Manage Stores</description>
    <label>CCP ANSO flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>