sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>LEM-6144: This represents the main Contract record on which the Associated Account Ids are currently stored.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Associated Accounts</relationshipLabel>
    <relationshipName>Contract_Associated_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>