sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-11329 Corporate cherry picking</description>
    <label>Group</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>QLG Contract Associated Accounts</relationshipLabel>
    <relationshipName>QLG_Contract_Associated_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>