sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/IsProcessingExistingStores__c.field-meta.xml
<CustomField>
    <fullName>IsProcessingExistingStores__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-11329 To store whether CAA record was created in the scenario of new stores or existing stores.</description>
    <inlineHelpText>Whether the requests should be processed via Batch?</inlineHelpText>
    <label>Is Processing Existing Stores?</label>
    <type>Checkbox</type>
</CustomField>