sfdx-source/force-app/main/default/objects/Contract_Associated_Accounts__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Indicates ordering/number of Contract Associated Accounts -- i.e., the first record will have 1 in this field, the second record (if needed) will have 2, etc.</description>
    <inlineHelpText>Indicates ordering/number of Contract Associated Accounts -- i.e., the first record will have 1 in this field, the second record (if needed) will have 2, etc.</inlineHelpText>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>